# renderer

./: CMakeLists.txt  Ztest.cpp  engine.cpp  engine.h  homework1.cpp  homework1.h  homework2.cpp  homework2.h  homework3.cpp  homework3.h  main.cpp  mytest.cpp  readme.md  readme.txt  test.h  zBuffer.cpp
assets/: camera_position.txt  coordinate.txt  obj_position.txt  plane.d.txt  test_obj.d  test_obj.d.txt  test_obj2.d.txt  white-marble-textures.html
assets/D/: atc.d.txt  ball.d.txt  bench-big.d.txt  bench.d.txt  better-ball.d.txt  biplane.d.txt  bishop.d.txt  camaro.d.txt  car.d.txt  column.d.txt  cone.d.txt  cow.d.txt  cs219.d.txt  cylnd.d.txt  donut2.d.txt  doughnut.d.txt  face.d.txt  floor-small.d.txt  floor.d.txt  hackedcube.d  house.d.txt  icosa.d.txt  ionic.d.txt  jbase.d.txt  jcolumn.d.txt  king.d.txt  knight.d.txt  lbox.d.txt  nteapot2.d.txt  nteapot6.d.txt  pawn.d.txt  pole.d.txt  queen.d.txt  ramp.d.txt  rect-skinny.d.txt  rect-small.d.txt  rect.d.txt  redcar.d.txt  ronny.d.txt  ship.d.txt  (+5 more)
lib/: CMakeLists.txt  illumination.cpp  illumination.h  matrix.cpp  matrix.h  myGraphics.cpp  myGraphics.h
result/: texture.gif.sb-41b149d6-MgYJWP
